# ICNARI_2027_Conference_Website

./: Jenkinsfile  README.md  icnari27.nginx.conf  postgres.nginx.conf  s3.nginx.conf  s3.ui.nginx.conf
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.prod.db.yml  docker-compose.prod.s3.yml  docker-compose.prod.yml  docker-compose.yml
backend/config/: config.example.json
backend/routes/: README.md  openapi.yaml
backend/scripts/: createAdmin.cc
backend/sql/: 1-user.sql  1-users.sql  2-notification.sql  2-notifications.sql  3-gallery.sql  4-speaker.sql  5-committee.sql  6-contact.sql  6-contacts.sql
backend/src/: main.cc
backend/src/controllers/auth/: api_v1_auth.cc  api_v1_auth.h
backend/src/controllers/committee/: api_v1_committee.cc  api_v1_committee.h
backend/src/controllers/contact/: api_v1_contact.cc  api_v1_contact.h
backend/src/controllers/gallery/: api_v1_gallery.cc  api_v1_gallery.h
backend/src/controllers/health/: health.cc
backend/src/controllers/notifications/: api_v1_notifications.cc  api_v1_notifications.h
backend/src/controllers/speaker/: api_v1_speaker.cc  api_v1_speaker.h
backend/src/controllers/user/: api_v1_users.cc  api_v1_users.h
backend/src/filters/: AuthFilter.cc
backend/src/models/: Committee.cc  Committee.h  Contact.cc  Contact.h  Contacts.cc  Contacts.h  Gallery.cc  Gallery.h  Notification.cc  Notification.h  Notifications.cc  Notifications.h  Speaker.cc  Speaker.h  Speakers.cc  Speakers.h  User.cc  User.h  Users.cc  Users.h  model.example.json
backend/src/repositories/committee/: committee.repository.cc  committee.repository.hpp
backend/src/repositories/contact/: contact.repository.cc  contact.repository.hpp
backend/src/repositories/gallery/: gallery.repository.cc  (+1 more)
backend/src/services/: S3Service.cc  S3Service.h
backend/src/utils/: token.cc  token.hpp
(+101 files in other folders)
